fix code-wrap not extending to edges of page

--- a/src/scss/custom/app/components/_code-wrap.scss
+++ b/src/scss/custom/app/components/_code-wrap.scss
@@ -13,7 +13,7 @@
     content: '';
     display: block;
     background-color: #2d2d2d;
-    width: calc(100vw - 1rem);
+    width: 100vw;
     left: 50%;
     top: 0;
     height: 100%;
